changing site title because thats a thing

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
-    <title>React App</title>
+    <title>UNC Jerseys</title>
   </head>
   <body>
     <noscript>
